--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<link href="style.css" rel="stylesheet">
     <title>Siat,siat,siat</title>
 </head>
 <body>
+<div class="block">   
+      <p>Привет</p>
+      <H>Как дела?<H>
+    </div>
     <div class="lll">
      <p>Всем привет</p>
       <H>Hello world<H>
